# pp18-video-tools_tauri

./: .env.example  .gitignore  AGENT_HANDOFF.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: sync-binaries.mjs
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: FilterPopoverButton.tsx  StatusFooter.tsx  VideoPreviewPlayer.tsx  VideoTaskCard.tsx
src/components/ui/: badge.tsx  button.tsx  checkbox.tsx  context-menu.tsx  dialog.tsx  input.tsx  panel.tsx  popover.tsx  select.tsx  table.tsx
