[package]
name = "pp18-video-tools-tauri"
version = "0.1.4"
description = "PP18 Video Tools desktop app"
authors = ["PP18"]
edition = "2021"

[lib]
name = "pp18_video_tools_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13.3", features = ["blocking", "multipart", "json"] }
tauri = { version = "2.11.1", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
